--- a/LiqModelsSubduction.ipynb
+++ b/LiqModelsSubduction.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "En cuanto a las medidas de intensidad utilizadas, para ambos casos se utilizan los modelos de Montalva et al. (2017)<sup>1</sup> y Montalva et al. (2022)<sup>2</sup>.\n",
     "\n",
-    "Dichos modelos, junto con los modelos de predicción del potencial de licuación, se encuentran implementados en el GeoPortal de Peligrosidad Sísmica de Chile, el que está disponible en <a href=\"http://geop.servequake.com/cyclo/geoportal/app/\" target=\"_blank\">este link</a>.\n",
+    "Dichos modelos, junto con los modelos de predicción del potencial de licuación, se encuentran implementados en el GeoPortal de Peligrosidad Sísmica de Chile, el que está disponible en <a href=\"http://geoportal.cyclosismico.cl">este link</a>.\n",
     "\n",
     "### Referencias\n",
     "\n",
